# maxpane

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
.planning/: api-responses.json  base-terminal-plan.md  dashboard-plan.md  frenpet-dashboard-plan.md  frenpet-logo-ascii.txt  frenpet-overview-plan.md  themes-plan.md  ui-fix-plan.md  widget-conversion-plan.md
.planning/mockups/: mockup-bloomberg.txt  mockup-htop.txt  mockup-minimal.txt  mockup-retro-game.txt
dashboard/: __main__.py  app.py
dashboard/analytics/: base_signals.py  base_tokens.py  ev.py  frenpet_population.py  frenpet_signals.py  leaderboard.py
dashboard/screens/: bakery.py  base_terminal.py  frenpet.py  game_select.py
dashboard/templates/: leaderboard_template.py  sparkline_template.py  status_bar_template.py  two_column_table_template.py
dashboard/themes/: __init__.py
dashboard/widgets/: __init__.py  activity_feed.py  hero_metrics.py  signals_panel.py
docs/: IMPLEMENTATION_PLAN.md  MAXPANE_Intro_PRD.md  MAXPANE_PRD.md  bakery_game_mechanics.md  cattown_game_mechanics.md  cattown_implementation_plan.md  cattown_technical_findings.md  cattown_work_packages.md  dota_game_mechanics.md  dota_technical_findings.md  ocm_game_mechanics.md  ocm_implementation_plan.md  ocm_technical_findings.md
maxpane/: Cargo.toml
maxpane/src/: config.rs  lib.rs  (+3 more)
maxpane_dashboard/: __init__.py  __main__.py  app.py  config.py
scripts/: dashboard.sh  extract_cattown_abis.py  launch-iterm.sh  launch-maximized.sh  launch.sh  start.sh  stop.sh  validate_cattown_abis.py
(+226 files in other folders)
